[gd_scene load_steps=4 format=3 uid="uid://oy8ql7l6r7ly"]

[ext_resource type="Texture2D" uid="uid://3dhfgj6epynf" path="res://Assets/Tilesets/pixel-art-of-the-world-map-v0-yhg6z3q347h91.png" id="1_ig4bk"]
[ext_resource type="Theme" uid="uid://cqcye1csd01b6" path="res://Assets/theme.tres" id="2_1lslv"]
[ext_resource type="Script" path="res://Buttons/Level Buttons.gd" id="3_mx3jq"]

[node name="Levels" type="Node2D"]

[node name="Pixel-art-of-the-world-map-v0-yhg6z3q347h91" type="Sprite2D" parent="."]
position = Vector2(606, 327)
scale = Vector2(2.24364, 2)
texture = ExtResource("1_ig4bk")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 1323.0
offset_top = -9.0
offset_right = 2634.0
offset_bottom = 748.0
color = Color(0.314316, 0.314316, 0.314316, 1)

[node name="Panel" type="Panel" parent="."]
offset_left = 394.0
offset_top = 4.0
offset_right = 779.0
offset_bottom = 63.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 17.0
offset_top = 7.0
offset_right = 319.0
offset_bottom = 48.0
theme = ExtResource("2_1lslv")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "Select Mission
"

[node name="Panel2" type="Panel" parent="."]
offset_left = 1355.0
offset_top = 25.0
offset_right = 2046.0
offset_bottom = 124.0

[node name="Panel4" type="Panel" parent="."]
offset_left = 1378.0
offset_top = 153.0
offset_right = 1940.0
offset_bottom = 588.0

[node name="Panel5" type="Panel" parent="."]
offset_left = 2057.0
offset_top = 21.0
offset_right = 2435.0
offset_bottom = 206.0

[node name="Level Buttons" type="Node2D" parent="."]
script = ExtResource("3_mx3jq")

[node name="BackButton" type="Button" parent="Level Buttons"]
offset_left = 10.0
offset_top = 7.0
offset_right = 158.0
offset_bottom = 65.0
theme = ExtResource("2_1lslv")
theme_override_font_sizes/font_size = 30
text = "GO BACK
"

[node name="Button2" type="Button" parent="Level Buttons"]
offset_left = 516.0
offset_top = 268.0
offset_right = 611.0
offset_bottom = 294.0
theme = ExtResource("2_1lslv")
theme_override_font_sizes/font_size = 15
text = "Mission 2"

[node name="Button3" type="Button" parent="Level Buttons"]
offset_left = 495.0
offset_top = 152.0
offset_right = 590.0
offset_bottom = 178.0
theme = ExtResource("2_1lslv")
theme_override_font_sizes/font_size = 15
text = "Mission 3"

[node name="Button4" type="Button" parent="Level Buttons"]
offset_left = 620.0
offset_top = 613.0
offset_right = 715.0
offset_bottom = 639.0
theme = ExtResource("2_1lslv")
theme_override_font_sizes/font_size = 15
text = "Mission 4"

[node name="Button5" type="Button" parent="Level Buttons"]
offset_left = 350.0
offset_top = 386.0
offset_right = 445.0
offset_bottom = 412.0
theme = ExtResource("2_1lslv")
theme_override_font_sizes/font_size = 15
text = "Mission 5"

[node name="Button6" type="Button" parent="Level Buttons"]
offset_left = 995.0
offset_top = 208.0
offset_right = 1090.0
offset_bottom = 234.0
theme = ExtResource("2_1lslv")
theme_override_font_sizes/font_size = 15
text = "Mission 6"

[node name="Button7" type="Button" parent="Level Buttons"]
offset_left = 152.0
offset_top = 223.0
offset_right = 247.0
offset_bottom = 249.0
theme = ExtResource("2_1lslv")
theme_override_font_sizes/font_size = 15
text = "Mission 7"

[node name="Button8" type="Button" parent="Level Buttons"]
offset_left = 578.0
offset_top = 206.0
offset_right = 673.0
offset_bottom = 232.0
theme = ExtResource("2_1lslv")
theme_override_font_sizes/font_size = 15
text = "Mission 8
"

[node name="Button9" type="Button" parent="Level Buttons"]
offset_left = 243.0
offset_top = 203.0
offset_right = 338.0
offset_bottom = 229.0
theme = ExtResource("2_1lslv")
theme_override_font_sizes/font_size = 15
text = "Mission 9
"

[node name="StartButton" type="Button" parent="Level Buttons"]
offset_left = 1977.0
offset_top = 426.0
offset_right = 2434.0
offset_bottom = 523.0
theme = ExtResource("2_1lslv")
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 40
text = "START MISSION"

[node name="Changeloadout" type="Button" parent="Level Buttons"]
offset_left = 1981.0
offset_top = 214.0
offset_right = 2433.0
offset_bottom = 310.0
theme = ExtResource("2_1lslv")
theme_override_font_sizes/font_size = 40
text = "CHANGE LOADOUT"

[node name="Backtolevels" type="Button" parent="Level Buttons"]
offset_left = 1982.0
offset_top = 320.0
offset_right = 2434.0
offset_bottom = 416.0
theme = ExtResource("2_1lslv")
theme_override_font_sizes/font_size = 40
text = "GO BACK"

[node name="MissionLabel" type="Label" parent="Level Buttons"]
offset_left = 1384.0
offset_top = 53.0
offset_right = 1983.0
offset_bottom = 126.0
theme = ExtResource("2_1lslv")
theme_override_font_sizes/font_size = 50
text = " Sahara Desert"

[node name="MissionText" type="Label" parent="Level Buttons"]
offset_left = 1408.0
offset_top = 181.0
offset_right = 1919.0
offset_bottom = 586.0
theme = ExtResource("2_1lslv")
theme_override_font_sizes/font_size = 23
text = "Lorem Ipsum is simply dummy text of the printing and typesetting 
"
autowrap_mode = 2

[node name="Loadout" type="Label" parent="Level Buttons"]
offset_left = 2049.0
offset_top = 30.0
offset_right = 2428.0
offset_bottom = 200.0
theme = ExtResource("2_1lslv")
theme_override_font_sizes/font_size = 23
text = "Current Loadout:

Lv 1 Noble 
SCAR
M1911
Tactical Vest
"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Camera2D" type="Camera2D" parent="Level Buttons"]
position = Vector2(-2, 0)
anchor_mode = 0

[connection signal="pressed" from="Level Buttons/BackButton" to="Level Buttons" method="_on_back_button_pressed"]
[connection signal="pressed" from="Level Buttons/Button2" to="Level Buttons" method="_on_button_2_pressed"]
[connection signal="pressed" from="Level Buttons/Button3" to="Level Buttons" method="_on_button_3_pressed"]
[connection signal="pressed" from="Level Buttons/Button4" to="Level Buttons" method="_on_button_4_pressed"]
[connection signal="pressed" from="Level Buttons/Button5" to="Level Buttons" method="_on_button_5_pressed"]
[connection signal="pressed" from="Level Buttons/Button6" to="Level Buttons" method="_on_button_6_pressed"]
[connection signal="pressed" from="Level Buttons/Button7" to="Level Buttons" method="_on_button_7_pressed"]
[connection signal="pressed" from="Level Buttons/Button8" to="Level Buttons" method="_on_button_8_pressed"]
[connection signal="pressed" from="Level Buttons/Button9" to="Level Buttons" method="_on_button_9_pressed"]
[connection signal="pressed" from="Level Buttons/StartButton" to="Level Buttons" method="_on_start_button_pressed"]
[connection signal="pressed" from="Level Buttons/Changeloadout" to="Level Buttons" method="_on_changeloadout_pressed"]
[connection signal="pressed" from="Level Buttons/Backtolevels" to="Level Buttons" method="_on_backtolevels_pressed"]
